--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "cssocialstudies",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://elextric22.github.io/cs-socialstudies/",
+  "homepage": "https://elextric22.github.io/cs-socialstudies/",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.2.3",
     "cross-env": "^7.0.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
